--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,8 @@
 default: &default
   adapter: mysql2
-  encoding: utf8
+  charset: utf8mb4
+  encoding: utf8mb4
+  collation: utf8mb4_bin
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: dev_ops
   password:
