--- a/config/database.yml
+++ b/config/database.yml
@@ -4,8 +4,7 @@ default: &default
   encoding: utf8mb4
   collation: utf8mb4_bin
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: dev_ops
-  password:
+  username: root
   socket: /var/run/mysqld/mysqld.sock
 
 development:
@@ -19,5 +18,4 @@ test:
 production:
   <<: *default
   database: discord_recruitment_bot_production
-  username: ops
   password: <%= ENV['DATABASE_PASSWORD'] %>
