--- a/config/database.yml
+++ b/config/database.yml
@@ -4,18 +4,20 @@ default: &default
   encoding: utf8mb4
   collation: utf8mb4_bin
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
   socket: /var/run/mysqld/mysqld.sock
 
 development:
   <<: *default
+  username: dev_ops
   database: discord_recruitment_bot_development
 
 test:
   <<: *default
+  username: root
   database: discord_recruitment_bot_test
 
 production:
   <<: *default
+  username: ops
   database: discord_recruitment_bot_production
   password: <%= ENV['DATABASE_PASSWORD'] %>
