--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@
 config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
+
+# Ignore coverage report
+/coverage/*
+.coveralls.yml
