--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,6 @@
 name: build
 
-on:
-  pull_request:
-  push:
-    branches:
-    - master
+on: [pull_request]
 
 jobs:
   build:
@@ -16,10 +12,5 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
-    - name: set coverall repo token
-      run: 'echo "repo_token: ${{ secrets.COVERALLS_REPO_TOKEN }}" > .coveralls.yml'
-
     - name: run test
       run: . tools/ci/test.sh
-      env:
-        CI: true
