--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@master
-    - run: |
+
+    - name: set coverall repo token
+      run: 'echo "repo_token: ${{ secrets.COVERALLS_REPO_TOKEN }}" > .coveralls.yml'
+
+    - name: set master to branch name
+      run: git checkout -b master
+
+    - name: run test
+      run: . tools/ci/test.sh
+      env:
+        CI: true
+
+    - name: deploy
+      run: |
         mkdir -p /root/.ssh/
         echo "${{ secrets.GCE_DEPLOY_SSH_CONFIG }}" >> /etc/ssh/ssh_config
         echo "${{ secrets.GCE_PRIVATE_KEY }}" > /root/.ssh/id_rsa
