slackのデフォルト設定を追加

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -23,3 +23,6 @@ secret:
     appid: your appid
   open_weather_map:
     appid: your appid
+  slack:
+    access_token: your access token
+    notify_channel: notify channel
