--- a/tools/ansible/rails_server.yml
+++ b/tools/ansible/rails_server.yml
@@ -1,8 +1,8 @@
 - hosts: all
   roles:
-    - setup_gce
-    - common
-    - rbenv
-    - mysql
-    - nginx
-    - envfile
+    - { role: setup_gce, tags: [setup_gce] }
+    - { role: common, tags: [common] }
+    - { role: rbenv, tags: [rbenv] }
+    - { role: mysql, tags: [mysql] }
+    - { role: nginx, tags: [nginx] }
+    - { role: envfile, tags: [envfile] }
