Rubyバージョンを2.6.5に更新

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ config/environments/*.local.yml
 # Ignore coverage report
 /coverage/*
 .coveralls.yml
+
+# Ignore rbenv version file
+.ruby-version
