--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
 
     container:
-      image: utyosu/build-rails:latest
+      image: utyosu/build-rails:ruby2.6.5
 
     steps:
     - uses: actions/checkout@v1
