--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     container:
-      image: utyosu/build-rails:latest
+      image: utyosu/build-rails:ruby2.6.5
 
     steps:
     - uses: actions/checkout@v1
