--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -127,3 +127,7 @@ Style/HashTransformKeys:
 # ハッシュを書き換えるときにmapやeach_with_objectではなくtransform_valuesを使うようにする設定
 Style/HashTransformValues:
   Enabled: true
+
+# Rangeクラスの終端を-1にしないようにする設定
+Style/SlicingWithRange:
+  Enabled: true
