Add cop Layout/EmptyLinesAroundAttributeAccessor

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -139,3 +139,7 @@ Style/ExponentialNotation:
 # Structクラスのattributeが規程クラスのメソッドを上書きすることを禁止する設定
 Lint/StructNewOverride:
   Enabled: true
+
+# attrの後に空行を必須にする設定
+Layout/EmptyLinesAroundAttributeAccessor:
+  Enabled: true
